# env-manager

./: .gitignore  CODE_REVIEW.md  IFLOW.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build.yml  release.yml
.qoder/quests/: environment-variable-manager.md  unknown-task.md
scripts/: release.js  sync-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  tray.rs
src/components/EnvironmentForm/: EnvironmentForm.tsx
src/components/EnvironmentList/: EnvironmentList.tsx  EnvironmentListActions.tsx  EnvironmentListHeader.tsx  EnvironmentSection.tsx  EnvironmentVariableItem.tsx  ImportExportPanel.tsx  InvalidVariablesDialog.tsx  PathAnimation.css  PathVariableDisplay.tsx  PathVariableManager.tsx  SearchPanel.tsx
src/components/Header/: Header.tsx
src/components/Settings/: Settings.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  separator.tsx  toast.tsx
src/contexts/: ThemeContext.tsx
src/store/: envStore.ts
src/types/: global.d.ts
src/utils/: mockData.ts  searchTypes.ts  types.ts
